# bulletin-board-system

./: .gitignore  README.md
backend/: .env.example  .gitignore  db.sqlite3  pyproject.toml
backend/backend/: README.md  settings.py  urls.py
backend/board/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
backend/board/migrations/: 0001_initial.py
frontend/: .env.example  package-lock.json  package.json
frontend/data/: interfaces.tsx
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx
frontend/src/components/: BoardCard.tsx  BoardForm.tsx  BoardList.css  BoardList.tsx  Header.tsx  LoginForm.tsx  PostList.tsx  Profile.tsx  RegisterForm.css  RegisterForm.tsx  ThreadCard.tsx  ThreadList.tsx  TopicForm.tsx
frontend/src/stores/: BoardStore.tsx  PostStore.tsx  ProfileStore.tsx  ThreadStore.tsx  TopicStore.tsx  UserStore.tsx
frontend/src/utils/: functions.tsx
