[tool.poetry]
name = "backend"
version = "0.1.0"
description = "backend side of the bulletin board system"
authors = ["Radwan <ahmad.abdulrahman@bld.ai>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
